# K6

./: .gitignore  .gitmodules  CMakeLists.txt  K6-IME-Setup.bat  README.md
.github/workflows/: build.yml
data/: dictionary.txt  punctuationData.txt  strokeData.json  strokeData.txt  suggestionsData.json  suggestionsData.txt
resources/: resource.rc
scripts/: Build.ps1  ConvertData.ts  ConvertJsonToTxt.ts  Dev.ps1  Install-IME-NoAdmin.ps1  K6-IME-Setup.bat  K6-IME-Setup.sh  K6IME-Installer.nsi  README-Install.txt  Register-IME-NoAdmin.ps1  Register-IME.ps1  Register.ps1  Uninstall-IME-NoAdmin.ps1  Unregister-IME.ps1  Unregister.ps1  Verify-IME-Installation.ps1
src/: CandidateWindow.cpp  CandidateWindow.h  ClassFactory.cpp  ClassFactory.h  Debug.cpp  Debug.h  Dictionary.cpp  Dictionary.h  EditSession.cpp  EditSession.h  IndicatorWindow.cpp  IndicatorWindow.h  InputStateMachine.cpp  InputStateMachine.h  Punctuation.cpp  Punctuation.h  Registration.cpp  Registration.h  Stroke.h  Suggestions.cpp  Suggestions.h  TextService.cpp  TextService.h  dllmain.cpp  guid.h
